<resources>
    <string name="app_name">Wishlist</string>
    <string name="log_in_app_bar">Вход</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="log_in">Войти</string>
    <string name="log_out">Выйти</string>
    <string name="wait">Подождите…</string>
    <string name="register">Зарегистрироваться</string>
    <string name="register_app_bar">Регистрация</string>
    <string name="no_account">Еще нет аккаунта?</string>
    <string name="existing_account">Уже есть аккаунт?</string>
    <string name="email">Адрес эл. почты</string>
    <string name="profile">Профиль</string>
    <string name="mine">Мои желания</string>
    <string name="users">Пользователи</string>
    <string name="error">Ошибка</string>
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="something_went_wrong">Что-то пошло не так. Попробуйте позже.</string>
    <string name="successful_registration">Успешно</string>
    <string name="now_you_can_log_in">Теперь вы можете войти в зарегистрированный аккаунт.</string>
    <string name="save">Сохранить</string>
    <string name="name_prompt">Название</string>
    <string name="description_prompt">Описание</string>
    <string name="price_prompt">Цена, ₽</string>
    <string name="no_results">Список пуст</string>
    <string name="wishlists_of_user">Желания %1$s</string>
    <string name="wishlists_updated">Список желаний обновлен.</string>
    <string name="wishlists_created">Список желаний создан.</string>
    <string name="wishlists_deleted">Список желаний удален.</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="confirmation">Подтверждение</string>
    <string name="gifts_updated">Подарок обновлен.</string>
    <string name="gifts_created">Подарок создан.</string>
    <string name="gifts_deleted">Подарок удален.</string>
    <string name="gifts_status_changed">Статус подарка изменен.</string>
    <string name="wishlist_of_user_title">%1$s: %2$s</string>
    <string name="filter">Фильтры</string>
    <string name="apply">Применить</string>
    <string name="you_must_log_in_again">Из соображений безопасности вы должны заново войти в аккаунт.</string>
    <string name="wishlist_edit_title">Изменить список желаний</string>
    <string name="wishlist_new">Новый список желаний</string>
    <string name="gift_edit_title">Изменить подарок</string>
    <string name="gift_new">Новый подарок</string>
    <string name="filter_applied">Фильтр применен.</string>
    <string name="filter_cleared">Фильтр очищен.</string>
</resources>