<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    tools:context=".fragment.wishlists.edit.WishlistsEditFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/price_input_layout"
        android:hint="@string/name_prompt"
        android:layout_marginEnd="10dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText"
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/price_input_layout"
        style="@style/TextInputLayout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/price_prompt">

        <com.google.android.material.textfield.TextInputEditText
            android:digits="0123456789"
            style="@style/TextInputEditText"
            android:id="@+id/price_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_input_layout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/name_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/description_prompt">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText"
            android:id="@+id/description_input"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="top"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Button"
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/description_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        style="@style/Button.Inverted.Tint.BottomSheetDialog"
        android:id="@+id/wait_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wait"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/description_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>